# mem

./: Makefile  README  db_init  mem.cabal  test.mem
examples/: bg_open.mem
hsk/: h.xz  pt-num.txt
mm/pt/: num.mem  tenses.mem  vocab.mem
src/: FUtil.hs  Main.hs  dump.hs
test/: test.mem
