name:           mem
version:        0.1
license:        GPL
license-file:   LICENSE
author:         Daniel Corson
synopsis:       memorization program
build-type:     Simple
build-depends:  base >= 4,
                haskeline, HDBC, HDBC-postgresql, old-time, random,
                process, containers, FUtil, mtl, MonadRandom, HSH, bytestring,
                parsec, time

executable:     mem
main-is:        Main.hs
hs-source-dirs: src
