name:           mem
version:        0.1
license:        GPL
license-file:   LICENSE
author:         Daniel Corson
synopsis:       memorization program
build-type:     Simple
build-depends:
    base
  , bytestring
  , containers
  , directory
  , filepath
  , haskeline
  , HDBC
  , HDBC-sqlite3
  , MonadRandom
  , mtl
  , old-time
  , parsec
  , process
  , random
  , time

executable:     mem
main-is:        Main.hs
hs-source-dirs: src
