name:           mem
version:        0.1
license:        GPL
license-file:   LICENSE
author:         Daniel Corson
synopsis:       memorization program
build-type:     Simple
build-depends:
    base
  , bytestring
  , directory
  , haskeline
  , process
  , random
  , serialise
  , text
  , time
  , unordered-containers

executable:     mem
main-is:        Main.hs
hs-source-dirs: src
